--- a/index.html
+++ b/index.html
@@ -82,13 +82,32 @@
 
 <!-- REGLES -->
 <section id="regles">
-  <h2>📜 Règles du serveur</h2>
+  <h2>📜les interdictions</h2>
   <ul>
-    <li>Aucun cheat, hack ou exploitation de bug.</li>
-    <li>Respect obligatoire entre joueurs.</li>
+    <li>Tout mod ou datapack vous permettant d’avoir un avantage en pvp (ex : reach, fly hack, etc) est strictement interdit.</li>
+    <li>Tout mod, ressource pack ou datapack vous permettant de trouver des base (ex : xray, player détection, etc) est aussi formelement interdit.</li>
     <li>Pas d’insultes, spam ou propos offensants.</li>
-    <li>Pas de grief sur les constructions protégées.</li>
-    <li>Respectez les décisions du staff.</li>
+    <li>Tout mod, ressource pack ou datapack vous permettant d’avoir plus facilement du stuff (ex : xray, bot, etc) est également interdit.</li>
+    <li>Le serveur minecraft est egalement  soumis au droit suisse</li>
+    <li>Les chunk-ban sont interdit</li>
+    <li>Les machine à lag sont également interdit</li>
+    <li>les elytra en pvp sont interdit</li>
+  </ul>
+  <h2>📜les autorisations</h2>
+    <li>Mod : tout mod purement visuel et qui n’ajoute aucun avantage au joueur comparer au autres est autorisé</li>
+    <li>Ressource pack : les ressource pack sont évidement autorisez tant que vous respectez les 3 règles dans la section cheat, par exemple interdiction d’utilisez xray, par ailleurs si un ressources pack vous perment d’avoir de meilleur performance en jeu pour le pvp il est autoriser.</li>
+    <li>Datapack : Aucun datapack n’est autoriser</li>
+    <li>Si quelqu’un est surpris en train d’utilisez un datapack la sentence sera la même que pour les cheat </li>
+</section>
+
+<section id="Punitions">
+  <h2>Punitions si enfreinte de régles</h2>
+  <ul>
+    <li> Premiere fois ou vous trichez : 5 jour de bannissement ou 2 si vous vous dénoncer ou vous avouez ne pas avoir respecté ces règles</li>
+    <li>2e fois ou vous trichez : 2 semaine de bannissement</li>
+    <li>3e fois ou vous trichez : 1 mois et 2 semaine de bannissement</li>
+    <li>4e fois ou vous trichez : 1 année de bannissement</li>
+    <li>5e fois ou vous trichez : bannissement permanent</li>
   </ul>
 </section>
 
@@ -98,3 +117,4 @@
 
 </body>
 </html>
+
