--- a/GYYV.html
+++ b/GYYV.html
@@ -1,121 +1,243 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Serveur Minecraft</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #0f0f0f;
-      color: #ffffff;
-      scroll-behavior: smooth;
-    }
+  <meta charset="UTF-8">
+  <title>Serveur Minecraft - Slot SMP</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #0f0f0f;
+      color: #e0e0e0;
+      scroll-behavior: smooth;
+      line-height: 1.6;
+      padding-top: 60px;
+    }
 
-    section {
-      padding: 80px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
+    section, ul, p {
+      max-width: 900px;
+      margin: auto;
+    }
 
-    h1, h2 {
-      text-align: center;
-    }
+    h1, h2 {
+      text-align: center;
+    }
 
-    /* HOME */
-    #home {
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(#1b1b1b, #000);
-      text-align: center;
-    }
+    /* NAVIGATION FIXE */
+    nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: #111;
+      padding: 10px 0;
+      text-align: center;
+      z-index: 1000;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+    }
 
-    .ip {
-      background: #000;
-      padding: 15px 30px;
-      border-radius: 8px;
-      font-size: 1.4em;
-      margin: 20px 0;
-    }
+    nav a {
+      color: #fff;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+      display: inline-block;
+    }
 
-    /* LISTES */
-    ul {
-      max-width: 700px;
-      margin: auto;
-      line-height: 1.8;
-    }
+    nav a:hover {
+      color: #ff6f61;
+    }
 
-    footer {
-      background: #000;
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9em;
-    }
-  </style>
+    /* BOUTON HAMBURGER */
+    .menu-toggle {
+      display: none;
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      cursor: pointer;
+      font-size: 1.8em;
+      color: #fff;
+    }
+
+    nav ul {
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    nav ul li {
+      margin: 0 10px;
+    }
+
+    /* HOME */
+    #home {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(#1b1b1b, #000);
+      text-align: center;
+    }
+
+    .ip {
+      background: #000;
+      padding: 15px 30px;
+      border-radius: 8px;
+      font-size: 1.4em;
+      margin: 20px 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+    }
+
+    .ip button {
+      padding: 5px 10px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      background-color: #ff6f61;
+      color: white;
+      font-weight: bold;
+    }
+
+    /* LISTES */
+    ul {
+      line-height: 1.8;
+      padding-left: 20px;
+    }
+
+    footer {
+      background: #000;
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9em;
+      margin-top: 40px;
+    }
+
+    p {
+      margin: 15px auto;
+    }
+
+    /* RESPONSIVE */
+    @media (max-width: 768px) {
+      .menu-toggle {
+        display: block;
+      }
+      nav ul {
+        display: none;
+        flex-direction: column;
+        background: #111;
+        width: 100%;
+        text-align: center;
+        padding: 10px 0;
+      }
+      nav ul li {
+        margin: 10px 0;
+      }
+      nav ul.active {
+        display: flex;
+      }
+    }
+  </style>
 </head>
 
 <body>
 
+<!-- NAVIGATION -->
+<nav>
+  <span class="menu-toggle" onclick="toggleMenu()">☰</span>
+  <ul>
+    <li><a href="#home">Accueil</a></li>
+    <li><a href="#fonctionnement">Fonctionnement</a></li>
+    <li><a href="#regles">Règles</a></li>
+    <li><a href="#punitions">Punitions</a></li>
+    <li><a href="#staff">Staff</a></li>
+  </ul>
+</nav>
+
+<main>
 <!-- HOME -->
 <section id="home">
-  <h1>Serveur Minecraft du Gymnase d'Yverdon</h1>
-  <div class="ip">IP : game46-fr.hosterfy.com:20455</div>
+  <h1>Serveur Minecraft du Gymnase d'Yverdon</h1>
+  <div class="ip">
+    IP : game46-fr.hosterfy.com:20455
+    <button onclick="navigator.clipboard.writeText('game46-fr.hosterfy.com:20455'); alert('IP copiée !')">Copier</button>
+  </div>
+  <p>Bienvenue sur Slot SMP ! Serveur survie PVP.</p>
 </section>
 
 <!-- FONCTIONNEMENT -->
 <section id="fonctionnement">
-  <h2>⚙️ Fonctionnement du serveur</h2>
-  <p>
-    Le serveur Minecraft est un serveur survie et PVP.
-  </p>
-  <ul>
-    <li>Se faire tuer par un joueur vous fait perdre un slot d'inventaire.</li>
-    <li>Si vous tuez un joueur et que vous n'avez pas tous vos slots, vous en récupérez un ; sinon, vous recevez un booster.</li>
-    <li>Les boosters peuvent être utilisés pour récupérer un slot d'inventaire.</li>
-    <li>Si vous avez tous vos slots, les boosters peuvent être échangés contre des items spéciaux.</li>
-  </ul>
+  <h2>⚙️ Fonctionnement du serveur</h2>
+  <p>Le serveur Minecraft est un serveur survie et PVP :</p>
+  <ul>
+    <li>Lorsque vous tuez un joueur, vous lui volez un slot d'inventaire.</li>
+    <li>Si vous possédez déjà tous vos slots, vous recevez un <strong>Booster Shard</strong>.</li>
+    <li>Les Booster Shards peuvent être échangés contre des items spéciaux dans le monde Build à l’étage au spawn sur les plaques de pression.</li>
+    <li>Si vous découvrez un glitch ou suspectez quelqu’un de tricher, prévenez immédiatement le staff (ce sont Uny2uv et LisenokTI. Si vous n’arrivez pas à les atteindre, vous pouvez contacter Robidack ou Ekton64).</li>
+    <li>L’End ouvrira dans 2 semaines. La bordure initiale commence à 10k x 10k et sera étendue à 20k x 20k.</li>
+  </ul>
 </section>
 
 <!-- REGLES -->
 <section id="regles">
-  <h2>📜les interdictions</h2>
-  <ul>
-    <li>Tout mod ou datapack vous permettant d’avoir un avantage en pvp (ex : reach, fly hack, etc) est strictement interdit.</li>
-    <li>Tout mod, ressource pack ou datapack vous permettant de trouver des base (ex : xray, player détection, etc) est aussi formelement interdit.</li>
-    <li>Pas d’insultes, spam ou propos offensants.</li>
-    <li>Tout mod, ressource pack ou datapack vous permettant d’avoir plus facilement du stuff (ex : xray, bot, etc) est également interdit.</li>
-    <li>Le serveur minecraft est egalement  soumis au droit suisse</li>
-    <li>Les chunk-ban sont interdit</li>
-    <li>Les machine à lag sont également interdit</li>
-    <li>les elytra en pvp sont interdit</li>
-  </ul>
-  <h2>📜les autorisations</h2>
-    <li>Mod : tout mod purement visuel et qui n’ajoute aucun avantage au joueur comparer au autres est autorisé</li>
-    <li>Ressource pack : les ressource pack sont évidement autorisez tant que vous respectez les 3 règles dans la section cheat, par exemple interdiction d’utilisez xray, par ailleurs si un ressources pack vous perment d’avoir de meilleur performance en jeu pour le pvp il est autoriser.</li>
-    <li>Datapack : Aucun datapack n’est autoriser</li>
-    <li>Si quelqu’un est surpris en train d’utilisez un datapack la sentence sera la même que pour les cheat </li>
+  <h2>📜 Règles principales</h2>
+  <h3>Interdictions</h3>
+  <ul>
+    <li>Tout mod, datapack ou resource pack offrant un avantage en PVP ou permettant de localiser des bases (ex : Xray, fly hack) est strictement interdit.</li>
+    <li>Les chunk-ban et machines à lag sont interdits.</li>
+    <li>Aucune duplication n’est autorisée.</li>
+  </ul>
+
+  <h3>Autorisations</h3>
+  <ul>
+    <li>Mods purement visuels et sans avantage PVP sont autorisés.</li>
+    <li>Les resource packs sont autorisés tant qu’ils ne permettent pas d’avoir un avantage et respectent les règles ci-dessus.</li>
+    <li>Aucun datapack n’est autorisé.</li>
+  </ul>
 </section>
 
-<section id="Punitions">
-  <h2>Punitions si enfreinte de régles</h2>
-  <ul>
-    <li> Premiere fois ou vous trichez : 5 jour de bannissement ou 2 si vous vous dénoncer ou vous avouez ne pas avoir respecté ces règles</li>
-    <li>2e fois ou vous trichez : 2 semaine de bannissement</li>
-    <li>3e fois ou vous trichez : 1 mois et 2 semaine de bannissement</li>
-    <li>4e fois ou vous trichez : 1 année de bannissement</li>
-    <li>5e fois ou vous trichez : bannissement permanent</li>
-  </ul>
+<!-- PUNITIONS -->
+<section id="punitions">
+  <h2>⚠️ Punitions pour non-respect des règles</h2>
+  <ul>
+    <li>1ère infraction : 5 jours de bannissement (2 jours si vous vous dénoncez).</li>
+    <li>2ème infraction : 2 semaines de bannissement.</li>
+    <li>3ème infraction : 1 mois et 2 semaines de bannissement.</li>
+    <li>4ème infraction : 1 année de bannissement.</li>
+    <li>5ème infraction : bannissement permanent.</li>
+  </ul>
 </section>
+
+<!-- STAFF -->
+<section id="staff">
+  <h2>👑 Contact du staff</h2>
+  <ul>
+    <li>Administrateurs principaux : Uny2uv et LisenokTI</li>
+    <li>Si les administrateurs principaux ne sont pas atteignables, vous pouvez contacter Robidack ou Ekton64</li>
+  </ul>
+</section>
+</main>
 
 <footer>
-  © 2026 Slot SMP — Non affilié à Mojang
+  © 2026 Slot SMP — Non affilié à Mojang
 </footer>
+
+<script>
+  function toggleMenu() {
+    const menu = document.querySelector('nav ul');
+    menu.classList.toggle('active');
+  }
+</script>
 
 </body>
 </html>
+
+
 
 
