--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
     <li>Les Booster Shards peuvent être échangés contre des items spéciaux dans le monde Build à l’étage au spawn sur les plaques de pression.</li>
     <li>Si vous découvrez un glitch ou suspectez quelqu’un de tricher, prévenez immédiatement le staff (ce sont Uny2uv et LisenokTI. Si vous n’arrivez pas à les atteindre, vous pouvez contacter Robidack ou Ekton64).</li>
     <li>L’End ouvrira dans 2 semaines. La bordure initiale commence à 10k x 10k et sera étendue à 20k x 20k.</li>
+    <li>si vous entrez en pvp avec des elytra équipées, elles seont automatiquement déplacé dans votre inventaire. Si votre inventaire est plein, elles seront drop au sol.</li>
   </ul>
 </section>
 
@@ -237,3 +238,4 @@
 
 </body>
 </html>
+
