--- a/GYYV.html
+++ b/GYYV.html
@@ -1,241 +1,244 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Serveur Minecraft - Slot SMP</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom, #0f3, #060); /* green gradient for the whole page */
-      color: #e0e0e0;
-      scroll-behavior: smooth;
-      line-height: 1.6;
-      padding-top: 60px;
-    }
+  <meta charset="UTF-8">
+  <title>Serveur Minecraft - Slot SMP</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to bottom, #0f3, #060); /* green gradient */
+      color: #e0e0e0;
+      scroll-behavior: smooth;
+      line-height: 1.6;
+      padding-top: 60px;
+    }
 
-    section, ul, p {
-      max-width: 900px;
-      margin: auto;
-    }
+    section, ul, p {
+      max-width: 900px;
+      margin: auto;
+    }
 
-    h1, h2 {
-      text-align: center;
-    }
+    h1, h2 {
+      text-align: center;
+    }
 
-    /* NAVIGATION FIXE */
-    nav {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: #111;
-      padding: 10px 0;
-      text-align: center;
-      z-index: 1000;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.5);
-    }
+    /* NAVIGATION FIXE */
+    nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: #111;
+      padding: 10px 0;
+      text-align: center;
+      z-index: 1000;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+    }
 
-    nav a {
-      color: #fff;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-      display: inline-block;
-    }
+    nav a {
+      color: #fff;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+      display: inline-block;
+    }
 
-    nav a:hover {
-      color: #ff6f61;
-    }
+    nav a:hover {
+      color: #ff6f61;
+    }
 
-    /* BOUTON HAMBURGER */
-    .menu-toggle {
-      display: none;
-      position: absolute;
-      top: 10px;
-      right: 20px;
-      cursor: pointer;
-      font-size: 1.8em;
-      color: #fff;
-    }
+    /* BOUTON HAMBURGER */
+    .menu-toggle {
+      display: none;
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      cursor: pointer;
+      font-size: 1.8em;
+      color: #fff;
+    }
 
-    nav ul {
-      padding: 0;
-      margin: 0;
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
+    nav ul {
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
 
-    nav ul li {
-      margin: 0 10px;
-    }
+    nav ul li {
+      margin: 0 10px;
+    }
 
-    /* HOME */
-    #home {
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(to bottom, #0f6, #033); /* green gradient for home section */
-      text-align: center;
-    }
+    /* HOME */
+    #home {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(to bottom, #0f6, #033); /* green gradient */
+      text-align: center;
+    }
 
-    .ip {
-      background: #000;
-      padding: 15px 30px;
-      border-radius: 8px;
-      font-size: 1.4em;
-      margin: 20px 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-    }
+    .ip {
+      background: #000;
+      padding: 15px 30px;
+      border-radius: 8px;
+      font-size: 1.4em;
+      margin: 20px 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+    }
 
-    .ip button {
-      padding: 5px 10px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      background-color: #ff6f61;
-      color: white;
-      font-weight: bold;
-    }
+    .ip button {
+      padding: 5px 10px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      background-color: #ff6f61;
+      color: white;
+      font-weight: bold;
+    }
 
-    /* LISTES */
-    ul {
-      line-height: 1.8;
-      padding-left: 20px;
-    }
+    /* LISTES */
+    ul {
+      line-height: 1.8;
+      padding-left: 20px;
+    }
 
-    footer {
-      background: #000;
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9em;
-      margin-top: 40px;
-    }
+    footer {
+      background: #000;
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9em;
+      margin-top: 40px;
+    }
 
-    p {
-      margin: 15px auto;
-    }
+    p {
+      margin: 15px auto;
+    }
 
-    /* RESPONSIVE */
-    @media (max-width: 768px) {
-      .menu-toggle {
-        display: block;
-      }
-      nav ul {
-        display: none;
-        flex-direction: column;
-        background: #111;
-        width: 100%;
-        text-align: center;
-        padding: 10px 0;
-      }
-      nav ul li {
-        margin: 10px 0;
-      }
-      nav ul.active {
-        display: flex;
-      }
-    }
-  </style>
+    /* RESPONSIVE */
+    @media (max-width: 768px) {
+      .menu-toggle {
+        display: block;
+      }
+      nav ul {
+        display: none;
+        flex-direction: column;
+        background: #111;
+        width: 100%;
+        text-align: center;
+        padding: 10px 0;
+      }
+      nav ul li {
+        margin: 10px 0;
+      }
+      nav ul.active {
+        display: flex;
+      }
+    }
+  </style>
 </head>
 
 <body>
 
 <!-- NAVIGATION -->
 <nav>
-  <span class="menu-toggle" onclick="toggleMenu()">☰</span>
-  <ul>
-    <li><a href="#home">Accueil</a></li>
-    <li><a href="#fonctionnement">Fonctionnement</a></li>
-    <li><a href="#regles">Règles</a></li>
-    <li><a href="#punitions">Punitions</a></li>
-    <li><a href="#staff">Staff</a></li>
-  </ul>
+  <span class="menu-toggle" onclick="toggleMenu()">☰</span>
+  <ul>
+    <li><a href="#home">Accueil</a></li>
+    <li><a href="#fonctionnement">Fonctionnement</a></li>
+    <li><a href="#regles">Règles</a></li>
+    <li><a href="#punitions">Punitions</a></li>
+    <li><a href="#staff">Staff</a></li>
+  </ul>
 </nav>
 
 <main>
 <!-- HOME -->
 <section id="home">
-  <h1>Serveur Minecraft du Gymnase d'Yverdon</h1>
-  <div class="ip">
-    IP : game46-fr.hosterfy.com:20455
-    <button onclick="navigator.clipboard.writeText('game46-fr.hosterfy.com:20455'); alert('IP copiée !')">Copier</button>
-  </div>
-  <p>Bienvenue sur Slot SMP ! Serveur survie PVP.</p>
+  <h1>Serveur Minecraft du Gymnase d'Yverdon</h1>
+  <div class="ip">
+    IP : game46-fr.hosterfy.com:20455
+    <button onclick="navigator.clipboard.writeText('game46-fr.hosterfy.com:20455'); alert('IP copiée !')">Copier</button>
+  </div>
+  <p>Bienvenue sur Slot SMP ! Serveur survie PVP.</p>
 </section>
 
 <!-- FONCTIONNEMENT -->
 <section id="fonctionnement">
-  <h2>⚙️ Fonctionnement du serveur</h2>
-  <p>Le serveur Minecraft est un serveur survie et PVP :</p>
-  <ul>
-    <li>Lorsque vous tuez un joueur, vous lui volez un slot d'inventaire.</li>
-    <li>Si vous possédez déjà tous vos slots, vous recevez un <strong>Booster Shard</strong>.</li>
-    <li>Les Booster Shards peuvent être échangés contre des items spéciaux dans le monde Build à l’étage au spawn sur les plaques de pression.</li>
-    <li>Si vous découvrez un glitch ou suspectez quelqu’un de tricher, prévenez immédiatement le staff (ce sont Uny2uv et LisenokTI. Si vous n’arrivez pas à les atteindre, vous pouvez contacter Robidack ou Ekton64).</li>
-    <li>L’End ouvrira dans 2 semaines. La bordure initiale commence à 10k x 10k et sera étendue à 20k x 20k.</li>
-    <li>si vous entrez en pvp avec des elytra équipées, elles seont automatiquement déplacé dans votre inventaire. Si votre inventaire est plein, elles seront drop au sol.</li>
-  </ul>
+  <h2>⚙️ Fonctionnement du serveur</h2>
+  <p>Le serveur Minecraft est un serveur survie et PVP :</p>
+  <ul>
+    <li>Lorsque vous tuez un joueur, vous lui volez un slot d'inventaire.</li>
+    <li>Si vous possédez déjà tous vos slots, vous recevez un <strong>Booster Shard</strong>.</li>
+    <li>Les Booster Shards peuvent être échangés contre des items spéciaux dans le monde Build à l’étage au spawn sur les plaques de pression.</li>
+    <li>Si vous découvrez un glitch ou suspectez quelqu’un de tricher, prévenez immédiatement le staff (ce sont Uny2uv et LisenokTI. Si vous n’arrivez pas à les atteindre, vous pouvez contacter Robidack ou Ekton64).</li>
+    <li>L’End ouvrira dans 2 semaines. La bordure initiale commence à 10k x 10k et sera étendue à 20k x 20k.</li>
+  </ul>
 </section>
 
 <!-- REGLES -->
 <section id="regles">
-  <h2>📜 Règles principales</h2>
-  <h3>Interdictions</h3>
-  <ul>
-    <li>Tout mod, datapack ou resource pack offrant un avantage en PVP ou permettant de localiser des bases (ex : Xray, fly hack) est strictement interdit.</li>
-    <li>Les chunk-ban et machines à lag sont interdits.</li>
-    <li>Aucune duplication n’est autorisée.</li>
-  </ul>
+  <h2>📜 Règles principales</h2>
+  <h3>Interdictions</h3>
+  <ul>
+    <li>Tout mod, datapack ou resource pack offrant un avantage en PVP ou permettant de localiser des bases (ex : Xray, fly hack) est strictement interdit.</li>
+    <li>Les chunk-ban et machines à lag sont interdits.</li>
+    <li>Aucune duplication n’est autorisée.</li>
+  </ul>
 
-  <h3>Autorisations</h3>
-  <ul>
-    <li>Mods purement visuels et sans avantage PVP sont autorisés.</li>
-    <li>Les resource packs sont autorisés tant qu’ils ne permettent pas d’avoir un avantage et respectent les règles ci-dessus.</li>
-    <li>Aucun datapack n’est autorisé.</li>
-  </ul>
+  <h3>Autorisations</h3>
+  <ul>
+    <li>Mods purement visuels et sans avantage PVP sont autorisés.</li>
+    <li>Les resource packs sont autorisés tant qu’ils ne permettent pas d’avoir un avantage et respectent les règles ci-dessus.</li>
+    <li>Aucun datapack n’est autorisé.</li>
+  </ul>
 </section>
 
 <!-- PUNITIONS -->
 <section id="punitions">
-  <h2>⚠️ Punitions pour non-respect des règles</h2>
-  <ul>
-    <li>1ère infraction : 5 jours de bannissement (2 jours si vous vous dénoncez).</li>
-    <li>2ème infraction : 2 semaines de bannissement.</li>
-    <li>3ème infraction : 1 mois et 2 semaines de bannissement.</li>
-    <li>4ème infraction : 1 année de bannissement.</li>
-    <li>5ème infraction : bannissement permanent.</li>
-  </ul>
+  <h2>⚠️ Punitions pour non-respect des règles</h2>
+  <ul>
+    <li>1ère infraction : 5 jours de bannissement (2 jours si vous vous dénoncez).</li>
+    <li>2ème infraction : 2 semaines de bannissement.</li>
+    <li>3ème infraction : 1 mois et 2 semaines de bannissement.</li>
+    <li>4ème infraction : 1 année de bannissement.</li>
+    <li>5ème infraction : bannissement permanent.</li>
+  </ul>
 </section>
 
 <!-- STAFF -->
 <section id="staff">
-  <h2>👑 Contact du staff</h2>
-  <ul>
-    <li>Administrateurs principaux : Uny2uv et LisenokTI</li>
-    <li>Si les administrateurs principaux ne sont pas atteignables, vous pouvez contacter Robidack ou Ekton64</li>
-  </ul>
+  <h2>👑 Contact du staff</h2>
+  <ul>
+    <li>Administrateurs principaux : Uny2uv et LisenokTI</li>
+    <li>Si les administrateurs principaux ne sont pas atteignables, vous pouvez contacter Robidack ou Ekton64</li>
+  </ul>
 </section>
 </main>
 
 <footer>
-  © 2026 Slot SMP — Non affilié à Mojang
+  © 2026 Slot SMP — Non affilié à Mojang
 </footer>
 
 <script>
-  function toggleMenu() {
-    const menu = document.querySelector('nav ul');
-    menu.classList.toggle('active');
-  }
+  function toggleMenu() {
+    const menu = document.querySelector('nav ul');
+    menu.classList.toggle('active');
+  }
 </script>
 
 </body>
 </html>
+
+</body>
+</html>
+
 
