--- a/GYYV.html
+++ b/GYYV.html
@@ -181,6 +181,7 @@
     <li>Les Booster Shards peuvent être échangés contre des items spéciaux dans le monde Build à l’étage au spawn sur les plaques de pression.</li>
     <li>Si vous découvrez un glitch ou suspectez quelqu’un de tricher, prévenez immédiatement le staff (ce sont Uny2uv et LisenokTI. Si vous n’arrivez pas à les atteindre, vous pouvez contacter Robidack ou Ekton64).</li>
     <li>L’End ouvrira dans 2 semaines. La bordure initiale commence à 10k x 10k et sera étendue à 20k x 20k.</li>
+    <li>Si vous avez des elytra en pvp, elles seront déplacé dans votre inventaire, si il n'y a pas la place, elles seront drop sur le sol.</li>
   </ul>
 </section>
 
@@ -192,6 +193,7 @@
     <li>Tout mod, datapack ou resource pack offrant un avantage en PVP ou permettant de localiser des bases (ex : Xray, fly hack) est strictement interdit.</li>
     <li>Les chunk-ban et machines à lag sont interdits.</li>
     <li>Aucune duplication n’est autorisée.</li>
+    <li>Casser les portails de l'end est interdit.</li>
   </ul>
 
   <h3>Autorisations</h3>
@@ -237,8 +239,3 @@
 
 </body>
 </html>
-
-</body>
-</html>
-
-
