--- a/GYYV.html
+++ b/GYYV.html
@@ -163,7 +163,7 @@
 <main>
 <!-- HOME -->
 <section id="home">
-  <h1>Serveur Minecraft du Gymnase d'Yverdon</h1>
+  <h1>SlotSteal-SMP</h1>
   <div class="ip">
     IP : game46-fr.hosterfy.com:20455
     <button onclick="navigator.clipboard.writeText('game46-fr.hosterfy.com:20455'); alert('IP copiée !')">Copier</button>
@@ -240,4 +240,5 @@
 
 </body>
 </html>
+
 
