--- a/GYYV.html
+++ b/GYYV.html
@@ -163,7 +163,7 @@
 <main>
 <!-- HOME -->
 <section id="home">
-  <h1>SlotSteal-SMP</h1>
+  <h1>SlotSteal-SMP</h1
   <div class="ip">
     IP : game46-fr.hosterfy.com:20455
     <button onclick="navigator.clipboard.writeText('game46-fr.hosterfy.com:20455'); alert('IP copiée !')">Copier</button>
@@ -195,6 +195,8 @@
     <li>Aucune duplication n’est autorisée.</li>
     <li>Casser les portails de l'end est interdit.</li>
     <li>Interdiction de mettre du stuff dans les chunk claim.</li>
+    <li>Interdiction de piéger le spawn.</li>
+    <li>Interdiction de fuir un combat avec une commande ou une stasis.</li>
   </ul>
 
   <h3>Autorisations</h3>
@@ -209,11 +211,11 @@
 <section id="punitions">
   <h2>⚠️ Punitions pour non-respect des règles</h2>
   <ul>
-    <li>1ère infraction : 5 jours de bannissement (2 jours si vous vous dénoncez).</li>
-    <li>2ème infraction : 2 semaines de bannissement.</li>
-    <li>3ème infraction : 1 mois et 2 semaines de bannissement.</li>
-    <li>4ème infraction : 1 année de bannissement.</li>
-    <li>5ème infraction : bannissement permanent.</li>
+    <li>1ère infraction : 5 jours de bannissement à jurisprudence (2 jours si vous vous dénoncez).</li>
+    <li>2ème infraction : 2 semaines de bannissement à jurisprudence.</li>
+    <li>3ème infraction : 1 mois et 2 semaines de bannissement à jurisprudence.</li>
+    <li>4ème infraction : 1 année de bannissement à jurisprudence.</li>
+    <li>5ème infraction : bannissement permanent à jurisprudence.</li>
   </ul>
 </section>
 
@@ -240,6 +242,4 @@
 
 </body>
 </html>
-
-
 
