--- a/index.html
+++ b/index.html
@@ -211,11 +211,8 @@
 <section id="punitions">
   <h2>⚠️ Punitions pour non-respect des règles</h2>
   <ul>
-    <li>1ère infraction : 5 jours de bannissement à jurisprudence (2 jours si vous vous dénoncez).</li>
-    <li>2ème infraction : 2 semaines de bannissement à jurisprudence.</li>
-    <li>3ème infraction : 1 mois et 2 semaines de bannissement à jurisprudence.</li>
-    <li>4ème infraction : 1 année de bannissement à jurisprudence.</li>
-    <li>5ème infraction : bannissement permanent à jurisprudence.</li>
+    <li>Votre peine sera détermimée à jurisprudence.</li>
+    <li>La peine s'étend également sur le serveur  discord.</li>
   </ul>
 </section>
 
@@ -242,4 +239,3 @@
 
 </body>
 </html>
-
